Corrected final ES table

--- a/2_Data.Rmd
+++ b/2_Data.Rmd
@@ -16,13 +16,13 @@ The data from the NWFSC shelf-slope survey was analyzed using a spatio-temporal 
 
 The smallest `r spp` tend to occur in the shallower depths (< 200 m) with only larger individuals occurring at depths deeper than 300 m. Data collected by the NWFSC shelf-slope survey between depths of 55 - 549 m and north of $42^\circ$ and south of $49^\circ$ were stratified to generate an index of abundance from 2003-2016. The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The lognormal distribution with random strata-year and vessel effects had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:nw_qq}).  The indices for the NWFSC shelf-slope survey show a tentative decline in the population between 2003 and 2009, with an increasing trend in biomass between the 2009 and 2016 median point estimates.
 
-Length and conditional age-at-length compositions were expanded based upon the stratification.  The number of tows with length data ranged from 33 in 2006 to 69 in 2015 (Table \ref{tab:NWcombo_Lengths}) where ages were collected for `r spp` in nearly every tow (Table \ref{tab:NWcombo_Ages}).  The expanded length frequencies from this survey show an increase in small fish starting in 2010 (Figure \ref{fig:nw_Length}).  The age frequencies provide clear evidence of large year-classes moving through the population from the 1999, 2000, and 2008 recruitment; with early indications of a large 2013 recruitment (Figure \ref{fig:nw_Age}).
+Length compositions were expanded based upon the stratification and the age data was used as conditional age-at-length data.  The number of tows with length data ranged from 33 in 2006 to 69 in 2015 (Table \ref{tab:NWcombo_Lengths}) where ages were collected for `r spp` in nearly every tow (Table \ref{tab:NWcombo_Ages}).  The expanded length frequencies from this survey show an increase in small fish starting in 2010 (Figure \ref{fig:nw_Length}).  The age frequencies provide clear evidence of large year-classes moving through the population from the 1999, 2000, and 2008 recruitment; with early indications of a large 2013 recruitment (Figure \ref{fig:nw_Age}).
 
-The effective sample sizes for length and marginal age composition data for all fishery-independent surveys were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] which determined that the approximate realized sample size for shelf/slope rockfish species was 2.43*$N_{\text{tow}}$.  The effective sample size of conditional-age-at-length data was set at the number of fish at each length by year.
+The effective sample sizes for length and marginal age composition data for all fishery-independent surveys were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] which determined that the approximate realized sample size for shelf/slope rockfish species was 2.43*$N_{\text{tow}}$.  The effective sample size of conditional-age-at-length data was set at the number of fish at each length by sex and by year.
 
 ###Northwest Fisheries Science Center (NWFSC) slope survey  
 
-The NWFSC slope survey covered waters throughout the summer from 183 m to 1280 m north of $34^\circ 30^\prime$ S, which is near Point Conception between 1999 and 2002.  Tows conducted between the depths of 183 and 549 m were used to create an index of abundance using a bayesian delta-GLMM and the VAST delta-GLMM models.  The estimated index of abundance is show in Table \ref{tab:Index_Summary}.  Based on the diagnostics the bayesian delta-GLMM, which does not account for spatial effects, gamma distribution with year-vessel random effects was selected as the final model.  The Q-Q plot does not show any extreme departures from the assumed distribution (Figure \ref{fig:nw_slope_qq}).  The trend of abundance across the four surveys years was generally flat with high estimated annual variance.
+The NWFSC slope survey covered waters throughout the summer from 183 m to 1280 m north of $34^\circ 30^\prime$ S, which is near Point Conception between 1999 and 2002.  Tows conducted between the depths of 183 and 549 m were used to create an index of abundance using a bayesian delta-GLMM and the VAST delta-GLMM models.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  Based on the diagnostics the bayesian delta-GLMM, which does not account for spatial effects, gamma distribution with year-vessel random effects was selected as the final model.  The Q-Q plot does show a minimal departure from the assumed distribution (Figure \ref{fig:nw_slope_qq}), but was determined to be acceptable based on the alternative model distributions.  The trend of abundance across the four surveys years was generally flat with high estimated annual variance.  Sensitivities were done evaluating the use of this index within the base model.
 
 Length and age compositions were available for 2001 and 2002 and were expanded based upon the survey stratification (Tables \ref{tab:NWslope_Lengths} and \ref{tab:NWslope_Ages}).  The expanded length frequencies from this survey shows that primarily only large fish were captured both years (Figure \ref{fig:nw_slope_Length}).  The majority of fish observed by this survey were aged at greater than 10 years (Figure \ref{fig:nw_slope_Age}).
 
