--- a/3_Assessment.Rmd
+++ b/3_Assessment.Rmd
@@ -85,7 +85,7 @@ Structurally, the model assumed that the catches from each fleet were representa
 ###Alternate Models Considered
 The exploration of models began by bridging from the 2011 assessment to Stock Synthesis version 3.30.03.05, which produced no discernible difference. The updated catch series with discards added per the 2011 assessment produced insignificant differences in the relative scale of the population although the updated historical removals resulted in an increase in the estimate of unfished biomass.   Updating the survey indices produced small differences in the relative scale of the population. Adding age and length data each resulted in less of a population decline from the 1970s to pre-2000, resulting in an increase in the estimated  `r Project_firstyr` final stock status.  However, the addition of new data resulted in an early pattern within recruitment, indicating that the assumptions within the previous model may not represent the best fit to the current data.
 
-This assessment estimated discards in the model, so time was spent investigating time blocks for changes in selectivity and retention to match thediscard data as best as possible. Using major changes in management and observed changes in landings, a set of blocks for retention was found for the fishery fleet. In the spirit of parsimony, as few blocks as possible were used, allowed blocks only for time periods with data, and added new blocks when we felt they were justified by changes in management and they improved the fit to the data.  
+This assessment estimated discards in the model, so time was spent investigating time blocks for changes in selectivity and retention to match the discard data as best as possible. Using major changes in management and observed changes in landings, a set of blocks for retention was found for the fishery fleet. In the spirit of parsimony, as few blocks as possible were used, allowed blocks only for time periods with data, and added new blocks when we felt they were justified by changes in management and they improved the fit to the data.  
 
 Natural mortality was also investigated and a new prior was developed assuming a maximum age of 100 years for females and males. The previous assessment estimated male natural mortality as an offset from female natural mortality which was fixed at the median of the 2011 prior (0.05).  This assessment attempted to estimate natural mortality for both sexes using the 2017 updated prior, but there was little to no information on natural mortality within the data and hence opted to fix the value for females within the base model.  Upon additional exploration, the model estimated very little difference in male natural mortality relative to females (< 0.002) and in the interest of selecting the model that fit the data with the fewest parameters required, males were fixed equal to the female natural mortality.
 
@@ -165,7 +165,7 @@ The observed and expected age-at-length are shown in Figures \ref{fig:nwfsc_comb
 
 The age data were also weighted according the Francis weighting which adjust the weight given to a data set based on the fit to the mean lengths by year.  The mean age and the estimated model fits are shown in Figures \ref{fig:weighting_fishery},  \ref{fig:weighting_ashop},  \ref{fig:weighting_triennial}, \ref{fig:weighting_nwfscslope},  and \ref{fig:weighting_nwfsccombo}.  The mean ages from the fishery appear to have declined in recent years which could be due to incoming cohorts (Figure \ref{fig:weighting_fishery}).  The At-sea hake fishery mean age are similar for 2006 and 2007 but both 2003 and 2014 have lower average age in the samples (Figure \ref{fig:weighting_ashop}).  The mean age for the Triennial survey varied across the sampling period but the distribution of sampled ages were highly variable across the years (Figure \ref{fig:weighting_triennial}). The NWFSC slope had a decline in  the mean age between the two data years (Figure \ref{fig:weighting_nwfscslope}). The mean age for the NWFSC shelf-slope survey generally showed a declining trend over the time-series excluding 2012 and 2016 which sampled older fish relative to the surrounding years  (Figure \ref{fig:weighting_nwfsccombo}).
 
-###Population trajectory
+###Population Trajectory
 The predicted spawning output (in millions of eggs) is given in Table \ref{tab:Timeseries_mod1} and plotted in Figure \ref{fig:ssb}. The predicted spawning output from the base model generally showed a slight decline over the time-series until  when the foreign fleet began. A short, but sharp decline occurred during the period of the foreign fishery in the late 1960s. The stock continued to decline minimally until 2000 when a combination of strong recruitment and low catches resulted in an increase at the end of the time-series. The recent increase is even faster for total biomass (Figure \ref{fig:total_bio}) because not all fish from the 2008 recruitment are mature (Figure \ref{fig:mat_compare}). The `r LastYR` spawning biomass relative to unfished equilibrium spawning biomass is above the target of 40% of unfished spawning biomass (`r Depl_mod1`), with a low of `r low.dep.value` in `r low.ssb` (Figure \ref{fig:depl}). Approximate confidence intervals based on the asymptotic variance estimates show that the uncertainty in the estimated spawning biomass is high, especially in the early years. The standard deviation of the log of the spawning biomass in `r LastYR` is `r round(mod1$Pstar_sigma,2)`.
 
 Recruitment deviations were estimated for the entire time series that was modeled (Figure \ref{fig:recruits} and discussed in Section \ref{parameter-estimates}) and provide a more realistic portrayal of uncertainty. Recruitment predictions from the mid-1970s and early 1980s were mostly below average, with the 1999, 2000, 2008, and 2013 cohorts being the strongest over the modeled period. Many other stock assessments of rockfish along the west coast of the US have estimated a large recruitment event in 1999 (e.g., greenstriped rockfish [@hicks_status_2009] chilipepper rockfish [@field_status_2007], darkblotched rockfish [@gertseva_status_2015]). The 2008 year classes was estimated as the strongest year class. This year has been estimated to have very strong year classes for other West Coast stocks (e.g  darkblotched rockfish [@gertseva_status_2015], widow rockfish [@hicks_status_2015]). It may be worthwhile to investigate the periods of strong and weak year classes further to see if it is an artifact of the data, a consistent autocorrelation, or a result of the environment.
