--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -195,7 +195,7 @@ represent any agency determination or policy.
 \addcontentsline{toc}{subsection}{Stock}
 
 This assessment reports the status of the Pacific ocean perch rockfish
-(\emph{Sebastes alutus}) off the US West Coast from Northern California
+(\emph{Sebastes alutus}) off the US west coast from Northern California
 to the Canadian Border using data through 2017. Pacific ocean perch are
 most abundant in the Gulf of Alaska and have observed off of Japan, in
 the Bering Sea, and south to Baja California, although they are sparse
@@ -220,8 +220,8 @@ metric tons (mt) per year between 1969 and 1980. Removals generally
 declined from 1981 to 1994 to between 1031 and 1616 mt per year. Pacific
 ocean perch was declared overfished in 1999, resulting in large
 reductions in harvest in recent years since the declaration. Since 2000,
-catches of Pacific ocean perch have ranged between 54-267 mt, with
-catches in 2016 totaling 65 mt.
+landings of Pacific ocean perch have ranged between 54-267 mt, with
+landings in 2016 totaling 65 mt.
 
 Pacific ocean perch are a desirable market species and discarding has
 historically been low. However, management restrictions (e.g.~trip
@@ -271,11 +271,11 @@ fishery-independent surveys. \label{fig:Exec_catch1}}
 \addcontentsline{toc}{subsection}{Data and Assessment}
 
 This a new full assessment for Pacific ocean perch which was last
-assessed in 2011. In this assessment, all aspects of the model including
-catches, data, and modelling assumptions were re-evaluated as much as
+assessed in 2011. In this assessment, aspects of the model including
+landings, data, and modelling assumptions were re-evaluated as much as
 possible. The assessment was conducted using the length- and
 age-structured modeling software Stock Synthesis (version 3.30.03.05).
-The coastwide population was modeled assuming separate growth and
+The coastwide population was modeled to allow separate growth and
 mortality parameters for each sex (a two-sex model) from 1918 to 2017,
 and forecasted beyond 2017.
 
@@ -286,10 +286,10 @@ those used in previous assessments. These current data represent the
 best available scientific information. The landings history has been
 updated and extended back to 1918. Harvest was negligible prior to that
 year. Survey data from the Alaska and Northwest Fisheries Science
-Centers have been used to construct indices of abundance using analyzed
-using a spatio-temporal delta-model. Length, marginal age or conditional
-age-at-length compositions were also created for each fishery
-independent data source.
+Centers have been used to construct indices of abundance analyzed using
+a spatio-temporal delta-model. Length, marginal age or conditional
+age-at-length compositions were also created for each
+fishery-independent data source.
 
 The definition of fishing fleets have been changed from those in the
 2011 assessment. Three fishing fleets were specified within the model:
@@ -336,7 +336,7 @@ communication, NOAA, NWFSC). As is always the case, overall uncertainty
 is greater than that predicted by a single model specification. Among
 other sources of uncertainty that are not included in the current model
 are the degree of connectivity between the stocks of Pacific ocean perch
-off of Vancouver Island, British Columbia and those in PFMC waters, and
+off of Vancouver Island, British Columbia and those in US waters, and
 the effect of climatic variables on recruitment, growth and survival of
 Pacific ocean perch.
 
@@ -364,7 +364,7 @@ biomass is high.
 \includegraphics{r4ss/plots_mod1/ts7_Spawning_output_with_95_asymptotic_intervals_intervals.png}
 \caption{Time-series of spawning output trajectory (circles and line:
 median; light broken lines: 95\% credibility intervals) for the base
-case assessment model. \label{fig:Spawnbio_all}}
+assessment model. \label{fig:Spawnbio_all}}
 \end{figure}
 
 \begin{figure}
@@ -372,7 +372,7 @@ case assessment model. \label{fig:Spawnbio_all}}
 \includegraphics{r4ss/plots_mod1/ts9_Spawning_depletion_with_95_asymptotic_intervals_intervals.png}
 \caption{Estimated relative spawning biomass (depletion) with
 approximate 95\% asymptotic confidnce intervals (dashed lines) for the
-base case assessment model. \label{fig:RelDeplete_all}}
+base assessment model. \label{fig:RelDeplete_all}}
 \end{figure}
 
 \begin{table}[ht]
@@ -448,12 +448,12 @@ Year & Estimated Recruitment & \~{} 95\% confidence interval & Estimated Recruit
 \addcontentsline{toc}{subsection}{Exploitation status}
 
 The spawning biomass of Pacific ocean perch reached a low in 1994.
-Catches for Pacific ocean perch decreased significantly in 2000 compared
-to previous years. The estimated relative biomass was possibly below the
-overfished level in the early 2000s, but has likely remained above that
-level otherwise, and currently is significantly greater than the 40\%
-unfished spawning biomass target. Throughout the late 1960s and 1970s
-the exploitation rate and (1-SPR)/(1-SPR\textsubscript{50\%}) were
+Landings for Pacific ocean perch decreased significantly in 2000
+compared to previous years. The estimated relative biomass was possibly
+below the overfished level in the early 2000s, but has likely remained
+above that level otherwise, and currently is significantly greater than
+the 40\% unfished spawning biomass target. Throughout the late 1960s and
+1970s the exploitation rate and (1-SPR)/(1-SPR\textsubscript{50\%}) were
 mostly above target levels. Recent exploitation rates on Pacific ocean
 perch were predicted to be significantly below target levels.
 
@@ -547,16 +547,17 @@ ecosystem issues specific to Pacific ocean perch.
 \addcontentsline{toc}{subsection}{Reference Points}
 
 This stock assessment estimates that Pacific ocean perch are above the
-biomass target. Due to the large 2008 year-class, an increasing trend in
-spawning biomass was estimated in the base model. The estimated relative
-biomass level in 2017 is 76.1\% (\textasciitilde{}95\% asymptotic
-interval: \(\pm\) 53.8\%-98.4\%), corresponding to an unfished spawning
-output of 5047 million eggs (\textasciitilde{}95\% asymptotic interval:
-2259-7835 million eggs). Unfished age 3+ biomass was estimated to be
-139810 mt in the base case model. The target spawning output based on
-the biomass target (\(SB_{40\%}\)) is 2653.2 million eggs, which gives a
-catch of 1748.2 mt. Equilibrium yield at the proxy \(F_{MSY}\) harvest
-rate corresponding to \(SPR_{50\%}\) is 1764.8 mt.
+biomass target. Due to reduced landing and the large 2008 year-class, an
+increasing trend in spawning biomass was estimated in the base model.
+The estimated relative biomass level in 2017 is 76.1\%
+(\textasciitilde{}95\% asymptotic interval: \(\pm\) 53.8\%-98.4\%),
+corresponding to an unfished spawning output of 5047 million eggs
+(\textasciitilde{}95\% asymptotic interval: 2259-7835 million eggs).
+Unfished age 3+ biomass was estimated to be 139810 mt in the base model.
+The target spawning output based on the biomass target (\(SB_{40\%}\))
+is 2653.2 million eggs, which gives a catch of 1748.2 mt. Equilibrium
+yield at the proxy \(F_{MSY}\) harvest rate corresponding to
+\(SPR_{50\%}\) is 1764.8 mt.
 
 \begin{table}[ht]
 \centering
@@ -572,7 +573,7 @@ Unfished spawning output (million eggs) & 6633.1 &   4736.7 -   8529.5 \\
   Unfished age 3+ biomass (mt) & 139810 & 100052.5 - 179567.5 \\ 
   Unfished recruitment (R0, thousands) & 11665.7 &   8801.4 -  15462.1 \\ 
   Spawning output(2017 million eggs) & 5047.2 &   2259.2 -   7835.1 \\ 
-  Depletion (2017) & 0.761 &    0.538 -    0.984 \\ 
+  Relative biomass (depletion) (2017) & 0.761 &    0.538 -    0.984 \\ 
   \textbf{$\text{Reference points based on } \mathbf{SB_{40\%}}$} &  &  \\ 
   Proxy spawning output ($B_{40\%}$) & 2653.2 &   1894.7 -   3411.8 \\ 
   SPR resulting in $B_{40\%}$ ($SPR_{B40\%}$) & 0.55 &     0.55 -     0.55 \\ 
@@ -771,12 +772,12 @@ that are considered of the importance.
 \scalebox{0.6}{
 \begin{tabular}{r>{\centering}p{1.1in}>{\centering}p{1.1in}>{\centering}p{1.1in}>{\centering}p{1.1in}>{\centering}p{1.1in}>{\centering}p{1.1in}>{\centering}p{1.1in}>{\centering}p{1.1in}>{\centering}p{1.1in}>{\centering}p{1.1in}}
   \hline
-Quantity & 2009 & 2010 & 2011 & 2012 & 2013 & 2014 & 2015 & 2016 & 2017 & 2018 \\ 
+Quantity & 2008 & 2009 & 2010 & 2011 & 2012 & 2013 & 2014 & 2015 & 2016 & 2017 \\ 
   \hline
-Landings (mt) & 911 & 1,160 & 1,173 & 1,026 & 1,007 & 844 & 838 & 842 & 850 & 964 \\ 
-  Total Est. Catch (mt) & 150 & 189 & 200 & 180 & 183 & 150 & 153 & 158 & 164 & 281 \\ 
-  OFL (mt) & 92 & 94 & 97 & 60 & 57 & 55 & 54 & 58 & 65 &  \\ 
-  ACL (mt) & 133 & 190 & 181 &  61 &  58 &  57 &  55 &  59 &  65 &  \\ 
+OFL (mt) & 911 & 1,160 & 1,173 & 1,026 & 1,007 & 844 & 838 & 842 & 850 & 964 \\ 
+  ACL (mt) & 150 & 189 & 200 & 180 & 183 & 150 & 153 & 158 & 164 & 281 \\ 
+  Landings (mt) & 92 & 94 & 97 & 60 & 57 & 55 & 54 & 58 & 65 &  \\ 
+  Total Est. Catch (mt) & 133 & 190 & 181 &  61 &  58 &  57 &  55 &  59 &  65 &  \\ 
    \hline
 (1-$SPR$)(1-$SPR_{50\%}$) & 0.086 & 0.113 & 0.107 & 0.037 & 0.035 & 0.033 & 0.029 & 0.028 & 0.028 &  \\ 
    \hline
@@ -786,7 +787,7 @@ Exploitation rate & 0.002 & 0.003 & 0.002 & 0.001 & 0.001 & 0.001 & 0.001 & 0.00
 Spawning Output & 3211 & 3346 & 3438 & 3500 & 3545 & 3584 & 3727 & 4118 & 4620 & 5047 \\ 
   ~95\% CI & 1362 - 5060 & 1425 - 5267 & 1467 - 5408 & 1496 - 5504 & 1521 - 5570 & 1544 - 5625 & 1618 - 5835 & 1812 - 6425 & 2054 - 7186 & 2259 - 7835 \\ 
    \hline
-Depletion & 0.484 & 0.504 & 0.518 & 0.528 & 0.534 & 0.540 & 0.562 & 0.621 & 0.697 & 0.761 \\ 
+Relative Biomass & 0.484 & 0.504 & 0.518 & 0.528 & 0.534 & 0.540 & 0.562 & 0.621 & 0.697 & 0.761 \\ 
   ~95\% CI & 0.330 - 0.638 & 0.345 - 0.664 & 0.355 - 0.681 & 0.362 - 0.693 & 0.368 - 0.701 & 0.373 - 0.708 & 0.390 - 0.733 & 0.435 - 0.807 & 0.491 - 0.902 & 0.538 - 0.984 \\ 
    \hline
 Recruits & 133246 &   4814 &   8279 &  16107 &   2113 &  29278 &   5078 &  10096 &  10520 &  10816 \\ 
@@ -847,8 +848,8 @@ At-sea hake fleet, and fishery-independent surveys.
 
 Prior to 1966, the Pacific ocean perch resource off of the northern
 portion of the US west coast was harvested almost entirely by Canadian
-and United States vessels. Harvest was negligible prior to 1940, reached
-1367 mt in 1950, 3243 mt in 1961 and 7635 mt in 1965. Catches increased
+and US vessels. Harvest was negligible prior to 1940, reached 1367 mt in
+1950, 3243 mt in 1961 and 7635 mt in 1965. Catches increased
 dramatically after 1965, with the introduction of large distant-water
 fishing fleets from the Soviet Union and Japan. Both nations employed
 large factory stern trawlers as their primary method for harvesting
@@ -869,24 +870,25 @@ decline since 1994, primarily due to more restrictive management (Table
 
 Prior to 1977, Pacific ocean perch in the northeast Pacific were managed
 by the Canadian Government in its waters and by the individual states in
-waters off of the United States. With implementation of the Magnuson
-Fishery Conservation and Management Act (MFCMA) in 1977, US territorial
-waters were extended to 200 miles from shore, and primary responsibility
-for management of the groundfish stocks off Washington, Oregon and
+waters off of the US. With implementation of the Magnuson Fishery
+Conservation and Management Act (MFCMA) in 1977, US territorial waters
+were extended to 200 miles from shore, and primary responsibility for
+management of the groundfish stocks off Washington, Oregon and
 California shifted from the states to the Pacific Fishery Management
 Council (PFMC) and the National Marine Fisheries Service (NMFS). At that
-time, however, a Fishery Management Plan (FMP) for the West Coast
-groundfish stocks had not yet been approved. In the interim, the state
-agencies worked with the PFMC to address conservation issues. In 1981,
-the PFMC adopted a management strategy to rebuild the depleted Pacific
-ocean perch stocks to levels that would produce Maximum Sustainable
-Yield (MSY) within 20 years. On the basis of cohort analysis (Gunderson
+time, however, a Fishery Management Plan for the West Coast groundfish
+stocks had not yet been approved. In the interim, the state agencies
+worked with the PFMC to address conservation issues. In 1981, the PFMC
+adopted a management strategy to rebuild the depleted Pacific ocean
+perch stocks to levels that would produce Maximum Sustainable Yield
+(MSY) within 20 years. On the basis of cohort analysis (Gunderson
 \protect\hyperlink{ref-gunderson_results_1978}{1978}), the PFMC set
 Acceptable Biological Catch (ABC) levels at 600 mt for the US portion of
-the Vancouver INPFC area and 950 mt for the Columbia INPFC area. To
-implement this strategy, the states of Oregon and Washington each
-established landing limits for Pacific ocean perch. Trawl trip limits of
-various forms remained in effect through 2016 (Table \ref{tab:Regs}).
+the Vancouver INPFC area and 950 mt for the Columbia International North
+Pacific Fishery Commission (INPFC) area. To implement this strategy, the
+states of Oregon and Washington each established landing limits for
+Pacific ocean perch. Trawl trip limits of various forms remained in
+effect through 2016 (Table \ref{tab:Regs}).
 
 Age estimates for Pacific ocean perch prior to the 1980s were made via
 surface ageing of otoliths, which misses the very tight annuli at the
@@ -939,7 +941,7 @@ Limits on Pacific ocean perch were first established in 1983 (Table
 and cumulative landing limits. In 1999, Pacific ocean perch was declared
 overfished with the assessment estimating the spawning output below the
 management limit (25\% of virgin biomass). In reaction to the overfished
-deceleration, harvest limits were reduced relative to previous years and
+decleration, harvest limits were reduced relative to previous years and
 a rebuilding plan was implemented in 2001 with recent ACLs being set
 well below the estimated OFLs (Table \ref{tab:mnmgt_perform_tables}).
 
@@ -1025,16 +1027,16 @@ shelf-slope survey show a tentative decline in the population between
 2003 and 2009, with an increasing trend in biomass between the 2009 and
 2016 median point estimates.
 
-Length and conditional age-at-length compositions were expanded based
-upon the stratification. The number of tows with length data ranged from
-33 in 2006 to 69 in 2015 (Table \ref{tab:NWcombo_Lengths}) where ages
-were collected for Pacific ocean perch in nearly every tow (Table
-\ref{tab:NWcombo_Ages}). The expanded length frequencies from this
-survey show an increase in small fish starting in 2010 (Figure
-\ref{fig:nw_Length}). The age frequencies provide clear evidence of
-large year-classes moving through the population from the 1999, 2000,
-and 2008 recruitment; with early indications of a large 2013 recruitment
-(Figure \ref{fig:nw_Age}).
+Length compositions were expanded based upon the stratification and the
+age data was used as conditional age-at-length data. The number of tows
+with length data ranged from 33 in 2006 to 69 in 2015 (Table
+\ref{tab:NWcombo_Lengths}) where ages were collected for Pacific ocean
+perch in nearly every tow (Table \ref{tab:NWcombo_Ages}). The expanded
+length frequencies from this survey show an increase in small fish
+starting in 2010 (Figure \ref{fig:nw_Length}). The age frequencies
+provide clear evidence of large year-classes moving through the
+population from the 1999, 2000, and 2008 recruitment; with early
+indications of a large 2013 recruitment (Figure \ref{fig:nw_Age}).
 
 The effective sample sizes for length and marginal age composition data
 for all fishery-independent surveys were calculated according to Stewart
@@ -1042,7 +1044,7 @@ and Hamel (\protect\hyperlink{ref-stewart_bootstrapping_2014}{2014})
 which determined that the approximate realized sample size for
 shelf/slope rockfish species was 2.43*\(N_{\text{tow}}\). The effective
 sample size of conditional-age-at-length data was set at the number of
-fish at each length by year.
+fish at each length by sex and by year.
 
 \subsubsection{Northwest Fisheries Science Center (NWFSC) slope
 survey}\label{northwest-fisheries-science-center-nwfsc-slope-survey}
@@ -1055,10 +1057,12 @@ delta-GLMM and the VAST delta-GLMM models. The estimated index of
 abundance is show in Table \ref{tab:Index_Summary}. Based on the
 diagnostics the bayesian delta-GLMM, which does not account for spatial
 effects, gamma distribution with year-vessel random effects was selected
-as the final model. The Q-Q plot does not show any extreme departures
-from the assumed distribution (Figure \ref{fig:nw_slope_qq}). The trend
+as the final model. The Q-Q plot does show a minimal departure from the
+assumed distribution (Figure \ref{fig:nw_slope_qq}), but was determined
+to be acceptable based on the alternative model distributions. The trend
 of abundance across the four surveys years was generally flat with high
-estimated annual variance.
+estimated annual variance. Sensitivities were done evaluating the use of
+this index within the base model.
 
 Length and age compositions were available for 2001 and 2002 and were
 expanded based upon the survey stratification (Tables
@@ -1936,7 +1940,7 @@ to the current data.
 
 This assessment estimated discards in the model, so time was spent
 investigating time blocks for changes in selectivity and retention to
-match thediscard data as best as possible. Using major changes in
+match the discard data as best as possible. Using major changes in
 management and observed changes in landings, a set of blocks for
 retention was found for the fishery fleet. In the spirit of parsimony,
 as few blocks as possible were used, allowed blocks only for time
@@ -2211,7 +2215,7 @@ survey generally showed a declining trend over the time-series excluding
 2012 and 2016 which sampled older fish relative to the surrounding years
 (Figure \ref{fig:weighting_nwfsccombo}).
 
-\subsubsection{Population trajectory}\label{population-trajectory}
+\subsubsection{Population Trajectory}\label{population-trajectory}
 
 The predicted spawning output (in millions of eggs) is given in Table
 \ref{tab:Timeseries_mod1} and plotted in Figure \ref{fig:ssb}. The
