--- a/0_Executive_Summary.Rmd
+++ b/0_Executive_Summary.Rmd
@@ -2,12 +2,12 @@
 #Executive Summary{-}
 
 ##Stock{-}
-This assessment reports the status of the `r spp` rockfish (\emph{`r spp.sci`})  off the US West Coast from Northern California to the Canadian Border using data 
+This assessment reports the status of the `r spp` rockfish (\emph{`r spp.sci`})  off the US west coast from Northern California to the Canadian Border using data 
 through `r LastYR`.  `r spp` are most abundant in the Gulf of Alaska and have observed off of Japan, in the Bering Sea, and south to Baja California, although they are sparse south of Oregon and rare in southern California. Although catches north of the US-Canada border were not included in this assessment, it is not certain the connectivity of these populations with contribution to the biomass possibly through adult migration and/or larval dispersion. To date, no significant genetic differences have been found in the range covered by this assessment.
 
 
 ##Landings{-}
-The first year that harvest of `r spp` exceeded 1 mt off the US west coast first occurred in `r Dat_start_mod1`.  Catches ramped up in the 1940s with large removals in Washington waters.  During the 1950s the removals primary occurred in Oregon waters with catches from Washington declining following the 1940s. The largest removals occurring between 1966-1968 were largely a result of harvest by foreign vessels.  The fishery proceeded with more moderate removals ranging between `r min(round(Tot.catch.df[Tot.catch.df[,1] >= 1969 & Tot.catch.df[,1] <= 1980,2],0))` to `r max(round(Tot.catch.df[Tot.catch.df[,1] >= 1969 & Tot.catch.df[,1] <= 1980,2],0))` metric  tons (mt) per year between 1969 and 1980. Removals generally declined from 1981 to 1994 to between `r min(round(Tot.catch.df[Tot.catch.df[,1] >= 1981 & Tot.catch.df[,1] <= 1994,2],0))` and `r max(round(Tot.catch.df[Tot.catch.df[,1] >= 1981 & Tot.catch.df[,1] <= 1994,2],0))` mt per year.  `r spp` was declared overfished in 1999, resulting in large reductions in harvest in recent years since the declaration.  Since 2000, catches of `r spp` have ranged between `r paste0( min(round(Tot.catch.df[Tot.catch.df[,1] > 2000 & Tot.catch.df[,1] <= Dat_end_mod1,2],0)), '-', max(round(Tot.catch.df[Tot.catch.df[,1] > 2000 & Tot.catch.df[,1] <= Dat_end_mod1,2],0)) )` mt, with catches in `r Dat_end_mod1` totaling `r round(Tot.catch.df[Tot.catch.df[,1] == Dat_end_mod1,2],0)` mt.
+The first year that harvest of `r spp` exceeded 1 mt off the US west coast first occurred in `r Dat_start_mod1`.  Catches ramped up in the 1940s with large removals in Washington waters.  During the 1950s the removals primary occurred in Oregon waters with catches from Washington declining following the 1940s. The largest removals occurring between 1966-1968 were largely a result of harvest by foreign vessels.  The fishery proceeded with more moderate removals ranging between `r min(round(Tot.catch.df[Tot.catch.df[,1] >= 1969 & Tot.catch.df[,1] <= 1980,2],0))` to `r max(round(Tot.catch.df[Tot.catch.df[,1] >= 1969 & Tot.catch.df[,1] <= 1980,2],0))` metric  tons (mt) per year between 1969 and 1980. Removals generally declined from 1981 to 1994 to between `r min(round(Tot.catch.df[Tot.catch.df[,1] >= 1981 & Tot.catch.df[,1] <= 1994,2],0))` and `r max(round(Tot.catch.df[Tot.catch.df[,1] >= 1981 & Tot.catch.df[,1] <= 1994,2],0))` mt per year.  `r spp` was declared overfished in 1999, resulting in large reductions in harvest in recent years since the declaration.  Since 2000, landings of `r spp` have ranged between `r paste0( min(round(Tot.catch.df[Tot.catch.df[,1] > 2000 & Tot.catch.df[,1] <= Dat_end_mod1,2],0)), '-', max(round(Tot.catch.df[Tot.catch.df[,1] > 2000 & Tot.catch.df[,1] <= Dat_end_mod1,2],0)) )` mt, with landings in `r Dat_end_mod1` totaling `r round(Tot.catch.df[Tot.catch.df[,1] == Dat_end_mod1,2],0)` mt.
 
 `r spp` are a desirable market species and discarding has historically been low.  However, management restrictions (e.g. trip limits) have resulted in increased discarding since the early 1990s.  During the 2000s discarding increased for `r spp` due to harvest restrictions imposed to allow rebuilding, with estimated discard rates from the bottom trawl fishery peaking in 2009 and 2010 to discard rates of `r paste0(round(100*max(mod1$discard[mod1$discard$Yr ==2009, "Obs"], mod1$discard[mod1$discard$Yr ==2010, "Obs"]),1),'%')`, prior to implementation of catch shares in 2011.  Since 2011, discarding of `r spp` has been estimated to be less than `r paste0(round(100*max(mod1$discard[mod1$discard$Yr >=2011, "Obs"]),1),'%')` based on observer data.
 
@@ -37,9 +37,9 @@ The first year that harvest of `r spp` exceeded 1 mt off the US west coast first
 \FloatBarrier
 
 ##Data and Assessment{-}
-This a new full assessment for `r spp` which was last assessed in 2011.  In this assessment, all aspects of the model including catches, data, and modelling assumptions were re-evaluated as much as possible. The assessment was conducted using the length- and age-structured modeling software Stock Synthesis (version 3.30.03.05).  The coastwide population was modeled assuming separate growth and mortality parameters for each sex (a two-sex model) from `r Dat_start_mod1` to `r LastYR`, and forecasted beyond `r LastYR`.
+This a new full assessment for `r spp` which was last assessed in 2011.  In this assessment, aspects of the model including landings, data, and modelling assumptions were re-evaluated as much as possible. The assessment was conducted using the length- and age-structured modeling software Stock Synthesis (version 3.30.03.05).  The coastwide population was modeled to allow separate growth and mortality parameters for each sex (a two-sex model) from `r Dat_start_mod1` to `r LastYR`, and forecasted beyond `r LastYR`.
 
-All of the sources of data for `r spp` have been re-evaluated for `r LastYR`, excluding the historical fishery catch-per-unit time series. Changes of varying degrees have occurred in the data from those used in previous assessments. These current data represent the best available scientific information. The landings history has been updated and extended back to `r Dat_start_mod1`. Harvest was negligible prior to that year. Survey data from the Alaska and Northwest Fisheries Science Centers have been used to construct indices of abundance using analyzed using a spatio-temporal delta-model. Length, marginal age or conditional age-at-length compositions were also created for each fishery independent data source.
+All of the sources of data for `r spp` have been re-evaluated for `r LastYR`, excluding the historical fishery catch-per-unit time series. Changes of varying degrees have occurred in the data from those used in previous assessments. These current data represent the best available scientific information. The landings history has been updated and extended back to `r Dat_start_mod1`. Harvest was negligible prior to that year. Survey data from the Alaska and Northwest Fisheries Science Centers have been used to construct indices of abundance analyzed using a spatio-temporal delta-model. Length, marginal age or conditional age-at-length compositions were also created for each fishery-independent data source.
 
 The definition of fishing fleets have been changed from those in the 2011 assessment.  Three fishing fleets were specified within the model: 1) a combined bottom trawl, mid-water trawl and fixed gear fleet where only a small fraction of `r spp` occurring by fixed gear (termed the fishery fleet), 2) the historical foreign fleet, and 3) the At-sea hake fishery.  The fleet grouping were based on discarding practices.  The fishery fleet estimated a retention curve based upon discarding data and known management restrictions.  However, very little if any discarding is assumed to have occurred by the foreign fleet and the catch reported by the At-sea hake fishery accounts for both discarded and landed fish and hence, no additional mortality was estimated for each of these fleets.  
 
@@ -47,7 +47,7 @@ The assessment uses landings data and discard-fraction estimates; catch-per-unit
 
 Although there are many types of data available for `r spp` since the 1980s, which were used in this assessment, there is little information about steepness and natural mortality. Estimates of steepness are uncertain partly because of variable recruitment. Uncertainty in natural mortality is common in many fish stock assessments even when length and age data are available. 
 
-A number of sources of uncertainty are explicitly included in this assessment. This assessment includes gender differences in growth, a non-linear relationship between individual spawner biomass and effective spawning output, and an updated relationship between length and maturity, based upon non-published information (Melissa Head, personal communication, NOAA, NWFSC). As is always the case, overall uncertainty is greater than that predicted by a single model specification. Among other sources of uncertainty that are not included in the current model are the degree of connectivity between the stocks of `r spp` off of Vancouver Island, British Columbia and those in PFMC waters, and the effect of climatic variables on recruitment, growth and survival of `r spp`.
+A number of sources of uncertainty are explicitly included in this assessment. This assessment includes gender differences in growth, a non-linear relationship between individual spawner biomass and effective spawning output, and an updated relationship between length and maturity, based upon non-published information (Melissa Head, personal communication, NOAA, NWFSC). As is always the case, overall uncertainty is greater than that predicted by a single model specification. Among other sources of uncertainty that are not included in the current model are the degree of connectivity between the stocks of `r spp` off of Vancouver Island, British Columbia and those in US waters, and the effect of climatic variables on recruitment, growth and survival of `r spp`.
 
 A reference case was selected which adequately captures the central tendency for those sources of uncertainty considered in the model.
 
@@ -69,10 +69,10 @@ The predicted spawning biomass from the base model generally showed a slight dec
 
 ```
 
-![Time-series of spawning output trajectory (circles and line: median; light broken lines: 95% credibility intervals) for the base case assessment model.  \label{fig:Spawnbio_all}](`r spawn.file`)
+![Time-series of spawning output trajectory (circles and line: median; light broken lines: 95% credibility intervals) for the base assessment model.  \label{fig:Spawnbio_all}](`r spawn.file`)
 
 
-![Estimated relative spawning biomass (depletion) with approximate 95% asymptotic confidnce intervals (dashed lines) for the base case assessment model. \label{fig:RelDeplete_all}](`r Bratio.file`)
+![Estimated relative spawning biomass (depletion) with approximate 95% asymptotic confidnce intervals (dashed lines) for the base assessment model. \label{fig:RelDeplete_all}](`r Bratio.file`)
 
 <!--BEGIN  EXECUTIVE SUMMARY SPAWNING BIOMASS AND DEPLETE TABLES AND FIGURES-->
 ```{r, results='asis'}
@@ -104,7 +104,7 @@ Recruitment deviations were estimated for the entire time-series modeled. There 
 
 
 ##Exploitation status{-}
-The spawning biomass of `r spp` reached a low in `r low.ssb`.  Catches for `r spp` decreased significantly in 2000 compared to previous years. The estimated relative biomass was possibly below the overfished level in the early 2000s, but has likely remained above that level otherwise, and currently is significantly greater than the 40% unfished spawning biomass target. Throughout the late 1960s and 1970s the exploitation rate and (1-SPR)/(1-SPR\textsubscript{50\%}) were mostly above target levels. Recent exploitation rates on `r spp` were predicted to be significantly below target levels.
+The spawning biomass of `r spp` reached a low in `r low.ssb`.  Landings for `r spp` decreased significantly in 2000 compared to previous years. The estimated relative biomass was possibly below the overfished level in the early 2000s, but has likely remained above that level otherwise, and currently is significantly greater than the 40% unfished spawning biomass target. Throughout the late 1960s and 1970s the exploitation rate and (1-SPR)/(1-SPR\textsubscript{50\%}) were mostly above target levels. Recent exploitation rates on `r spp` were predicted to be significantly below target levels.
 
 
 <!-- ***********BEGIN EXECUTIVE SUMMARY EXPLOITATION AND******************* -->
@@ -139,7 +139,7 @@ Fishing has effects on both the age structure of a population, as well as the ha
 
 ##Reference Points{-}
 
-This stock assessment estimates that `r spp` are `r ifelse(Deplete_mod1[nrow(Deplete_mod1),2]-MT>0,"above","below")` the biomass target. Due to the large 2008 year-class, an increasing trend in spawning biomass was estimated in the base model. The estimated relative biomass level in `r LastYR` is `r Depl_mod1` (~95% asymptotic interval: $\pm$ `r Depl_mod1_CI`), corresponding to an unfished spawning output of `r paste(Spawn_mod1, fecund_unit,sep=' ')` (~95% asymptotic interval: `r paste(Spawn_mod1_CI, fecund_unit, sep=' ')`).  Unfished age `r min_age` biomass was estimated to be `r Ref_pts_mod1[2,2]` mt in the base case model. The target spawning output based on the biomass target ($SB_{40\%}$) is `r paste(Ref_pts_mod1[7,2], fecund_unit,sep=' ')`, which gives a catch of `r Ref_pts_mod1[10,2]` mt. Equilibrium yield at the proxy $F_{MSY}$ harvest rate corresponding to $SPR_{50\%}$ is `r Ref_pts_mod1[15,2]` mt.
+This stock assessment estimates that `r spp` are `r ifelse(Deplete_mod1[nrow(Deplete_mod1),2]-MT>0,"above","below")` the biomass target. Due to reduced landing and the large 2008 year-class, an increasing trend in spawning biomass was estimated in the base model. The estimated relative biomass level in `r LastYR` is `r Depl_mod1` (~95% asymptotic interval: $\pm$ `r Depl_mod1_CI`), corresponding to an unfished spawning output of `r paste(Spawn_mod1, fecund_unit,sep=' ')` (~95% asymptotic interval: `r paste(Spawn_mod1_CI, fecund_unit, sep=' ')`).  Unfished age `r min_age` biomass was estimated to be `r Ref_pts_mod1[2,2]` mt in the base model. The target spawning output based on the biomass target ($SB_{40\%}$) is `r paste(Ref_pts_mod1[7,2], fecund_unit,sep=' ')`, which gives a catch of `r Ref_pts_mod1[10,2]` mt. Equilibrium yield at the proxy $F_{MSY}$ harvest rate corresponding to $SPR_{50\%}$ is `r Ref_pts_mod1[15,2]` mt.
 
 
 <!-- ***********BEGIN EXECUTIVE SUMMARY REFERENCE POINT TABLES************* -->
