--- a/2_Data.Rmd
+++ b/2_Data.Rmd
@@ -39,13 +39,13 @@ Length compositions were available for each year the survey was conducted.  No a
 
 The effective sample sizes for length and marginal age composition data were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
 
-###Triennial Bottom Trawl Survey
+###Triennial Survey
 
 The Triennial survey was first conducted by the AFSC in 1977 and spanned the time-frame from 1977-2004. The survey's design and sampling methods are most recently described in [@weinberg_estimation_2002]. Its basic design was a series of equally-spaced transects from which searches for tows in a specific depth range were initiated. The survey design has changed slightly over the period of time. In general, all of the surveys were conducted in the mid-summer through early fall: the 1977 survey was conducted from early July through late September; the surveys from 1980 through 1989 ran from mid-July to late September; the 1992 survey spanned from mid-July through early October; the 1995 survey was conducted from early June to late August; the 1998 survey ran from early June through early August; and the 2001 and 2004 surveys were conducted in May-July.
 
 Haul depths ranged from 91-457 m during the 1977 survey with no hauls shallower than 91 m. The surveys in 1980, 1983, and 1986 covered the West Coast south to $36.8^\circ$ N latitude and a depth range of 55-366 meters. The surveys in 1989 and 1992 covered the same depth range but extended the southern range to $34.5^\circ$ N (near Point Conception). From 1995 through 2004, the surveys covered the depth range 55-500 meters and surveyed south to $34.5^\circ$ N. In the final year of the Triennial series, 2004, the NWFSC's Fishery Resource and Monitoring division (FRAM) conducted the survey and followed very similar protocols as the AFSC.
 
-Given the different depths surveyed during 1977, the data from that year were not included in this assessment. Water hauls [@zimmermann_influence_2003] and tows located in Canadian waters were also excluded from the analysis of this survey. The data was examined for varying distribution of length and/or ages of fish based upon the shift in survey timing and little evidence was found of ontogenetic shifts in `r spp` during the summer months. `r spp` are rarely encountered south of $40^\circ$ where the change in southern range of the survey would have no impact on data collected regarding `r spp`. Given these factors the Triennial survey was analyzed as a single time-series, a departure from how the previous assessment which split the time-series into and an  early (1980-1992) and a late period (1995-2004).  
+Given the different depths surveyed during 1977, the data from that year were not included in this assessment. Water hauls [@zimmermann_influence_2003] and tows located in Canadian waters were also excluded from the analysis of this survey. The data was examined for varying distribution of length and/or ages of fish based upon the shift in survey timing and little evidence was found of ontogenetic shifts in `r spp` during the summer months. `r spp` are rarely encountered south of $40^\circ$ N where the change in southern range of the survey would have no impact on data collected regarding `r spp`. Given these factors the Triennial survey was analyzed as a single time-series, a departure from how the previous assessment which split the time-series into and an  early (1980-1992) and a late period (1995-2004).  
 
 An index of abundance was estimated based on the data using the VAST delta-GLMM model.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The lognormal distribution with random strata-year had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:tri_qq}).  The index shows a decline in abundance in the early years of the time-series and abundance remaining flat for the latter years.  
 
@@ -55,7 +55,7 @@ The effective sample sizes for length and marginal age composition data were cal
 
 ###Pacific ocean perch Survey
 
-A survey designed to sample `r spp` was conducted in 1979 and again in 1985 (for a detailed description see [@ianelli_status_1992]).  An index of abundance was estimated based on the data using the VAST delta-GLMM model.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The lognormal distribution with random strata-year had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:pop_qq}).  The index shows a clear decline in abundance between the two survey years. 
+A survey designed to sample `r spp` was conducted in 1979 and again in 1985 (for a detailed description see [-@ianelli_status_1992]).  An index of abundance was estimated based on the data using the VAST delta-GLMM model.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The lognormal distribution with random strata-year had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:pop_qq}).  The index shows a clear decline in abundance between the two survey years. 
 
 Length and age compositions were expanded based on the stratification. The survey had 125 and 126 `r spp` tows (Table \ref{tab:POP_Lengths}) and ages were only available in 1985 due to surface reads for the 1979 data (Table \ref{tab:POP_Ages}). The length frequencies for both years are highest between the 30-45 cm range (Figure \ref{fig:POP_Length}) with ages in 1985 having a large number of fish age 40 and greater (Figure \ref{fig:POP_Age}).
 
@@ -75,7 +75,7 @@ Historical commercial fishery landings of `r spp` from Washington for the years 
 
 **Oregon**
 
-Historical commercial fishery landings of `r spp` from Oregon for the years 1892-1986 were obtained from Alison Dauble (ODFW). A description of the methods can be found in Karnowski et al. [-@karnowski_historical_2014]. Recent landings (1987-2016) were obtained from PacFIN retrieval dated May 2, 2017, Pacific States Marine Fisheries Commission, Portland, Oregon; www.psmfc.org.  The catch data in from the POP and POP2 categories contained within PacFIN for `r spp` were used for this assessment.  Additional catches from 1987-1999 for `r spp` under the UROCK category not yet available in PacFIN were received directly from the state and combined with the catch data available for that period within PacFIN (Patrick Mirrick, personal communication, ODFW).
+Historical commercial fishery landings of `r spp` from Oregon for the years 1892-1986 were obtained from Alison Whitman (ODFW). A description of the methods can be found in Karnowski et al. [-@karnowski_historical_2014]. Recent landings (1987-2016) were obtained from PacFIN retrieval dated May 2, 2017, Pacific States Marine Fisheries Commission, Portland, Oregon; www.psmfc.org.  The catch data in from the POP and POP2 categories contained within PacFIN for `r spp` were used for this assessment.  Additional catches from 1987-1999 for `r spp` under the UROCK category not yet available in PacFIN were received directly from the state and combined with the landings data available for that period within PacFIN (Patrick Mirrick, personal communication, ODFW).
 
 **California**
 
@@ -113,15 +113,20 @@ Input effN = $7.06 * N_{\text{trips}}$ if $N_{\text{fish}}/N_{\text{trips}}$ is 
 
 The fishery fleet observed `r spp` that were generally greater than 30 cm across all years of available data (Figure \ref{fig:Comm_Length}). The fishery fleet age data has clear trends of a large cohort moving through the population (Figure \ref{fig:Comm_Age}). Lengths and ages were also available for the At-sea hake fishery and are shown in Figures \ref{fig:ASHOP_Length} and \ref{fig:ASHOP_Age}. 
 
+###Length and Age Data not Included in the Base Model
+Research length and ages were provided from Washington state.  However, the information regarding the nature of the research cruise and collection methods have been lost to time.  The data set includes lengths age ages that range from 1967-1972 and 1979.  The distribution of lengths across years collected were consistent with primarily only larger `r spp`, 35-40 cm, being selected.  All age data were based upon surface reads which unfortunately are highly biased at relatively young ages.  Due to the lack of information regarding the collection of these data, they were not selected to be apart of the base model but a sensitivity was conducted which evaluated the impact of these data.
+
+Oregon special project data were provided by the state.  These data represent samples made at either the dock or at processing plants from fishery landings.  Length data was collected primarily from 1970-1986, with limited samples from more recent years.  Age data were primarily available from 1981-1984.  These data were collected for special projects and may not have been sampled randomly from the fishery landings.  Due to these concerns, these data were not included in the base model but were included in a model sensitivity.
+
 <!--************BIOLOGICAL DATA*********************************************-->
 ##Biological Data
 
 ###Natural Mortality
 
-Historic `r spp` ages determined using scales and surface reading methods of otoliths, resulted in estimates of natural mortality ($M$) of between 0.10 and 0.20yr^-1^ with a longevity
+Historic `r spp` ages determined using scales and surface reading methods of otoliths, resulted in estimates of natural mortality ($M$) between 0.10 and 0.20yr^-1^ with a longevity
 less than 30 years [@gunderson_population_1977].  Based on break-and-burn method of age determination using otoliths, the maximum age of `r spp` was revised to be 90 years [@chilton_age_1982]. The updated understanding concerning `r spp` longevity reduced the estimate of natural mortality based on Hoenig's [-@hoenig_empirical_1983] relationship to 0.059yr^-1^. The previous assessment applied a prior distribution on natural mortality based upon multiple life history correlates (including Hoenig's method, Gunderson gonadosomatic index [-@gunderson_trade-off_1997], and McCoy and Gillooly's [-@mccoy_predicting_2008] theoretical relationship) developed separately for female and male `r spp`.  
 
-Hamel [-@hamel_method_2015] developed a method for combining meta-analytic approaches relating the natural mortality rate $M$ to other life-history parameters such as longevity, size, growth rate and reproductive effort, to provide a prior on $M$. In that same issue of ICESJMS, Then et al. [-@then_evaluating_2015], provided an updated data set of estimates of $M$ and related life history parameters across a large number of fish species, from which to develop an $M$ estimator for fish species in general. They concluded by recommending $M$ estimates be based on maximum age alone, based on an updated Hoenig non-linear least squares (nls) estimator $M=4.899A_{max}^(-.916)$. The approach of basing $M$ priors on maximum age alone was one that was already being used for West Coast rockfish assessments. However, in fitting the alternative model forms relating $M$ to $A_{\text{max}}$, Then et al. [-@then_evaluating_2015] did not consistently apply their transformation. In particular, in real space, one would expect substantial heteroscedasticity in both the observation and process error associated with the observed relationship of $M$ to $A_{\text{max}}$. Therefore, it would be reasonable to fit all models under a log transformation. This was not done. Re-evaluating the data used in Then et al. [-@then_evaluating_2015] by fitting the one-parameter $A_{\text{max}}$ model under a log-log transformation (such that the slope is forced to be -1 in the transformed space [@hamel_method_2015]), the point estimate for $M$ is:
+Hamel [-@hamel_method_2015] developed a method for combining meta-analytic approaches relating the $M$ rate to other life-history parameters such as longevity, size, growth rate and reproductive effort, to provide a prior on $M$. In that same issue of ICESJMS, Then et al. [-@then_evaluating_2015], provided an updated data set of estimates of $M$ and related life history parameters across a large number of fish species, from which to develop an $M$ estimator for fish species in general. They concluded by recommending $M$ estimates be based on maximum age alone, based on an updated Hoenig non-linear least squares (nls) estimator $M=4.899A^{-0.916}_{max}$. The approach of basing $M$ priors on maximum age alone was one that was already being used for West Coast rockfish assessments. However, in fitting the alternative model forms relating $M$ to $A_{\text{max}}$, Then et al. [-@then_evaluating_2015] did not consistently apply their transformation. In particular, in real space, one would expect substantial heteroscedasticity in both the observation and process error associated with the observed relationship of $M$ to $A_{\text{max}}$. Therefore, it would be reasonable to fit all models under a log transformation. This was not done. Re-evaluating the data used in Then et al. [-@then_evaluating_2015] by fitting the one-parameter $A_{\text{max}}$ model under a log-log transformation (such that the slope is forced to be -1 in the transformed space [@hamel_method_2015]), the point estimate for $M$ is:
 
 \begin{centering}
 
@@ -134,9 +139,9 @@ The above is also the median of the prior. The prior is defined as a lognormal w
 
 ###Sex Ratio, Maturation, and Fecundity
 
-Examining all biological data sources, the sex ratio of young fish are within 5% of 1:1 by length until larger sizes which are dominated by females who reach a larger maximum size relative to males (Figure \ref{fig:sexratio}), with the sex ratio being approximately equal across ages (Figure \ref{fig:sexratio_Age}), and hence this assessment the sex ratio at birth was assumed to be 1:1.  This assessment assumed a logistic maturity-at-length curve based on analysis of 537 fish maturity samples collected from the NWFSC shelf-slope survey.  This is revised from the previous assessment which assumed maturity-at-age based on the work of Hannah and Parker [-@hannah_age-modulated_2007].  Additionally, the new maturity-at-length curve is based on the estimate of functional maturity, an approach that classifies rockfish maturity with developing oocytes as mature or immature based on the proportion of vitellogenin in the cytoplasm and the measured frequency of atretic cells (Melissa Head, personal communication, NWFSC, NOAA).  The 50% size-at-maturity was estimated at 32.1 cm with maturity asymptoting to 1.0 for larger fish (Figure \ref{fig:mat}).  Comparison between the maturity-at-age used in the previous assessment and the updated functional maturity-at-length is shown in Figure \ref{fig:mat_compare}.
+Examining all biological data sources, the sex ratio of young fish are within 5% of 1:1 by length until larger sizes which are dominated by females who reach a larger maximum size relative to males (Figure \ref{fig:sexratio}), with the sex ratio being approximately equal across ages (Figure \ref{fig:sexratio_Age}), and hence this assessment assumed the sex ratio at birth was 1:1. This assessment assumed a logistic maturity-at-length curve based on analysis of 537 fish maturity samples collected from the NWFSC shelf-slope survey.  This is revised from the previous assessment which assumed maturity-at-age based on the work of Hannah and Parker [-@hannah_age-modulated_2007].  Additionally, the new maturity-at-length curve is based on the estimate of functional maturity, an approach that classifies rockfish maturity with developing oocytes as mature or immature based on the proportion of vitellogenin in the cytoplasm and the measured frequency of atretic cells (Melissa Head, personal communication, NWFSC, NOAA).  The 50% size-at-maturity was estimated at 32.1 cm with maturity asymptoting to 1.0 for larger fish (Figure \ref{fig:mat}).  Comparison between the maturity-at-age used in the previous assessment and the updated functional maturity-at-length is shown in Figure \ref{fig:mat_compare}.
 
-The fecundity-at-age has also been updated from the previous assessment based on new research.  Dick [-@dick_meta-analysis_2017] estimated new fecundity relationships for select West Coast stocks where fecundity for `r spp` was estimated equal to `r format(mod1$MGparmAdj$Eggs_scalar_Fem[1], scientific = TRUE)`$L$^`r round(mod1$MGparmAdj$Eggs_exp_len_Fem[1],2)`^ in millions of eggs. Spawning output at length is shown in Figure \ref{fig:fecundity}.
+The fecundity-at-length has also been updated from the previous assessment based on new research.  Dick [-@dick_meta-analysis_2017] estimated new fecundity relationships for select West Coast stocks where fecundity for `r spp` was estimated equal to `r format(mod1$MGparmAdj$Eggs_scalar_Fem[1], scientific = TRUE)`$L$^`r round(mod1$MGparmAdj$Eggs_exp_len_Fem[1],2)`^ in millions of eggs where $L$ is length in cm. Spawning output at length is shown in Figure \ref{fig:fecundity}.
 
 
 ###Length-Weight Relationship
@@ -156,7 +161,7 @@ Males $L_{\infty}$ = 39.03; $k$ = 0.212; $t_0$ = -1.02
 
 \end{centering}
 
-These values were used as starting parameter values within the model prior to estimating each parameter for male and female `r spp`.
+These values were used as starting parameter values within the base model prior to estimating each parameter for male and female `r spp`.
 
 
 ###Ageing Precision And Bias
@@ -190,7 +195,7 @@ Recommendation: Discard estimates from observer programs should be presented, re
   
 Recommendation: The ability to allow different "plus groups" for specific data types should be evaluated (and implemented in Stock Synthesis).  For example, this would provide the ability to use the biased surface-aged data in an appropriate way.
 
-*STAT response: Additional research needs to completed which evaluates the amount of bias and imprecision in surface-read ages.  Evaluating available surface-read ages within the PacFIN database fish of lengths between 23-44 cm can be aged at 10 years old.  This large range of lengths at the same age indicates considerable bias in ages for fish surface-read younger aged fish.*
+*STAT response: The STAT team agrees that this should be explored, but additional research needs to completed which evaluates the amount of bias and imprecision in surface-read ages.  Evaluating available surface-read ages within the PacFIN database fish of lengths between 23-44 cm can be aged at 10 years old.  This large range of lengths at the same age indicates considerable bias in ages for fish surface-read younger aged fish.*
 
 Recommendation: Historical catch reconstruction estimates should be formally reviewed prior to being used in assessments and should be coordinated so that interactions between stocks are appropriately treated. The relative reliability of the catch estimates over time could provide an axis of uncertainty in future assessments.
 
