--- a/4_HarvestProjections.Rmd
+++ b/4_HarvestProjections.Rmd
@@ -4,6 +4,4 @@
 
 A twelve year projection of the base model with catches equal to the estimated ACL for years 2019-2028 and a catch allocation equal to the percentages for each fleet over the period of 2014-2016 predicts an increase in the spawning output due to large 2008 cohort, with a slight downturn beginning in 2023 (Table \ref{tab:Forecast_mod1}). 
 
-\hl{Add additional projection post STAR based upon the decision table.}
-
-Table \ref{tab:Decision_table_mod1_back}
+Add additional projection post STAR based upon the decision table: Table \ref{tab:Decision_table_mod1_back}
